# NativeMonoEmbedded-App

./: .gitignore  README.md  prepare-runtime.py
Assembly-Main/: Assembly-Main.csproj  Assembly-Main.sln  Program.cs
NativeApp.Android/: .gitignore  settings.gradle
NativeApp.Android/app/: .gitignore  build.gradle
NativeApp.Android/app/src/main/: AndroidManifest.xml
NativeApp.Android/app/src/main/cpp/: CMakeLists.txt  android_mono.cpp  android_mono.h  native_lib.cpp
NativeApp.Android/app/src/main/java/com/monoembedtest/nativeapp/: AssetsExtractor.java  MainActivity.java  MonoRuntimeBootstrap.java
NativeApp.Android/app/src/main/res/values/: strings.xml
NativeApp.Android/gradle/: libs.versions.toml
NativeApp.Android/gradle/wrapper/: gradle-wrapper.properties
NativeApp.Desktop/: CMakeLists.txt  CMakePresets.json  main.cpp
NativeApp.Desktop/cmake/: GenImportLibs.cmake  PackageBuild.cmake
NativeApp.Shared/: CMakeLists.txt
NativeApp.Shared/cmake/: BuildManagedLib.cmake  EmbeddingMono.cmake
NativeApp.Shared/src/: abst_env.cpp  abst_env.h  shared_main.cpp  shared_main.h
